# tushare-cli-rust

./: .gitignore  COMPLETION_REPORT.md  Cargo.toml  FINAL_SUMMARY.md  FIX_CHINESE_NAME_REPORT.md  OPTIMIZATION_REPORT.md  PROJECT_SUMMARY.md  README.md  SKILL_README.md  TODO.md  install-skill.sh  install.ps1  install.sh
.github/workflows/: build-release.yml
scripts/: build-release.sh  generate-definitions.sh  generate-full-definitions.py  release.sh  strip-binary.sh  update-missing-apis.py  upload-release.sh
skill/: SKILL.md  skill.md
skill/references/: api-index.md
src/: error.rs  lib.rs  main.rs
src/api/: all-apis-from-sdk.txt  definitions-full.json  definitions.json  definitions.rs  mod.rs  search.rs
src/cli/: args.rs  commands.rs  mod.rs  parser.rs
src/client/: client.rs  mod.rs  request.rs  response.rs
src/config/: mod.rs  token.rs
src/output/: csv.rs  json.rs  markdown.rs  mod.rs  table.rs
tests/: integration_test.rs
